src/css/hero-panel.css
#selected-heroes {
    display: flex;
    width: 100%;
    overflow-x: scroll;
    margin: 15px;

    border: 5px solid rgba(207, 190, 152, 0.986);
    background-color: rgba(247, 229, 191, 0.884);
    border-radius: 5px;
}

.hero-panel ul {
    list-style: none;
}

.portrait {
    width: 50px;
    height: 50px;
    margin: auto;

    border: 2px solid rgb(122, 94, 41);
    border-radius: 15px;

    background-color: rgb(212, 173, 144);
}

.hero-panel {
    border: 2px solid rgb(90, 68, 28);
    padding: 10px;
    width: fit-content;
    margin: 5px;
    border-radius: 15px;

    background-color: rgb(219, 219, 185);

    user-select: none;
    min-width: fit-content;
}

.hero-panel li:hover {
    background-color: rgb(236, 236, 213);
}

.hero-panel li,
.lvl-controller {
    display: flex;
    justify-content: space-between;
    gap: 10px;
}

.hero-panel li .lvl-controller div {
    text-align: end;
    min-width: 2ch;
}

.hero-panel li:last-child,
.hero-panel section:last-child {
    border: none;
}

.hero-panel button {
    width: 1.2rem;
    height: 1.2rem;
}

.hero-panel section,
.hero-panel li {
    border-bottom: 1px solid rgb(206, 147, 98);
}

.hero-panel section:first-child li {
    border: none;
    margin-bottom: 2px;
}

.hero-panel h2,
.hero-panel p {
    text-align: center;
}

.hero-panel h2 {
    font-size: 1.2rem;
    padding: 5px 0;
}

.hero-panel p {
    font-weight: bold;
    padding: 5px 0;
}

#Player-panel {
    background-color: rgb(204, 201, 162);
}

#Player-panel .title {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.blink {
    animation: blink 1s linear infinite !important;
}

@keyframes blink {
    50% {
        background-color: rgb(197, 209, 248);
    }
}

